# phast3

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  Makefile.am  README  RELEASE  build-mpi-2012-64.cmake  build-mt-2012-64.cmake  build2012.bat  configure.ac  environment.yml  hstinpt.h  jenkins-dist-build.ps1
.github/: subtrees.json  superprojects.json
.github/workflows/: cmake-multi-platform.yml
Bootstrapper/: PhastBootstrapper.sln
Bootstrapper/PhastBootstrapper/: Bundle.wxs  PhastBootstrapper.wixproj
doc/: .gitlab-ci.yml  CMakeLists.txt
examples/: .gitlab-ci.yml  CMakeLists.txt  Makefile.am
examples/MoMaS/: MoMaS.bal.txt  MoMaS.chem.txt  MoMaS.probdef.txt  MoMaS.vel.txt  MoMaS_1.chem.xyz.tsv  Phast.tmp
examples/capecod/: Phast.tmp  capecod.K.horizontal  capecod.K.vertical  capecod.head.dat.save
examples/capecod/ArcData/: bath_83m.shp.xml  bedr_clip_90.txt  pond83sh.shp.xml
examples/capecod/WalterData/: 4Parkhurst.htm  bedrock_meters  bedrock_pts  drains_meters  (+12 more)
examples/dryriver/: dryriver.mv  dryriver_1.mv  dryriver_5.mv  time_head  xyzt_test
examples/ex5/: plume.heads.xyzt
msi/: MV.wxs  Product.wxs  Readme.wxs  bin.wxs  database.wxs  doc.wxs  environ.wxs  examples.wxs  lib.wxs  msi.sln  msi.wixproj  phast.wxs  shortcuts.wxs  src.wxs
phast2/figs/: files.prn  shell.ps
src/: CMakeLists.txt
src/phast/: CMakeLists.txt  Makefile.am  hdf.cpp
src/phasthdf/: CMakeLists.txt  build.xml.in
src/phastinput/: CMakeLists.txt  Domain.cpp  Domain.h  phastinput_version.h  wphast.h
test/: CMakeLists.txt  Makefile.am
(+95 files in other folders)
